error
make recoveryimage -j4
  File "<string>", line 1
    import os,sys; print os.path.realpath(sys.argv[1])
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
============================================
PLATFORM_VERSION_CODENAME=REL
PLATFORM_VERSION=16.1.0
TARGET_PRODUCT=omni_i11_Pro
TARGET_BUILD_VARIANT=eng
TARGET_BUILD_TYPE=release
TARGET_BUILD_APPS=
TARGET_ARCH=arm
TARGET_ARCH_VARIANT=armv7-a-neon
TARGET_CPU_VARIANT=generic
TARGET_2ND_ARCH=
TARGET_2ND_ARCH_VARIANT=
TARGET_2ND_CPU_VARIANT=
HOST_ARCH=x86_64
HOST_OS=linux
HOST_OS_EXTRA=Linux-5.15.0-43-generic-x86_64-with-glibc2.35
HOST_BUILD_TYPE=release
BUILD_ID=MOB31K
OUT_DIR=/out
============================================
  File "/home/administrator/Desktop/twrp/build/tools/findleaves.py", line 95
    print r
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
mkdir: cannot create directory ‘/out/target/product/i11_Pro/’: Permission denied
/bin/bash: line 1: /out/target/product/i11_Pro/clean_steps.mk: No such file or directory
mkdir: cannot create directory ‘/out/target/product/i11_Pro/’: Permission denied
/bin/bash: line 1: /out/host/linux-x86/previous_prebuilt_tools_config.mk: Permission denied
  File "/home/administrator/Desktop/twrp/build/tools/findleaves.py", line 95
    print r
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
touch: cannot touch '/out/target/common/obj/APPS/current_overlays.txt': Permission denied
/bin/bash: line 1: /out/target/common/obj/APPS/current_packages.txt: Permission denied
  File "/home/administrator/Desktop/twrp/build/tools/diff_package_overlays.py", line 88
    print r
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
mv: cannot stat '/out/target/common/obj/APPS/current_overlays.txt': No such file or directory
touch: cannot touch '/out/target/common/obj/current_aidl_config.mk': Permission denied
/bin/bash: line 1: /out/target/common/obj/current_aidl_config.mk: Permission denied
mv: cannot stat '/out/target/common/obj/current_aidl_config.mk': No such file or directory
No private recovery resources for TARGET_DEVICE i11_Pro
make: *** No rule to make target '/out/host/linux-x86/bin/minigzip', needed by '/out/target/product/i11_Pro/ramdisk-recovery.img'.  Stop.

#### make failed to build some targets (1 seconds) ####
